Merged changes from GloriaRework and seperated desktop config class
Desktop specific configurations are now found in subclass PreferencesDesktop